@@ -1,3 +1,11 @@
+2014-06-29  Alan Mackenzie  <acm@muc.de>
+
+	Don't call c-parse-state when c++-template-syntax-table is active.
+	* progmodes/cc-engine.el (c-guess-continued-construct CASE G)
+	(c-guess-basic-syntax CASE 5D.3): Rearrange so that
+	c-syntactic-skip-backwards isn't called with the pertinent syntax
+	table.
+
 2014-06-28  Stephen Berman  <stephen.berman@gmx.net>
 
 	* calendar/todo-mode.el (todo-set-top-priorities): Fix logic to
